criação de varios exemplos em js

--- a/aula04_javascript_parte1/exemplo07.html
+++ b/aula04_javascript_parte1/exemplo07.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo 2</title>
+    <title>Exemplo 6</title>
 </head>
 <body>
-    <script src="exemplo02.js">
-       
-    </script>
+    <script src="exemplo07.js"></script>
 </body>
 </html>
