--- a/aula04_javascript_parte1/exemplo04.html
+++ b/aula04_javascript_parte1/exemplo04.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo 2</title>
+    <title>Exemplo 3</title>
 </head>
 <body>
-    <script src="exemplo02.js">
+    <h1 id="titulo"></h1>
+    <script src="exemplo04.js">
        
     </script>
 </body>
